Create whole login thing. Started using Ollama to help final user to generate his keys